--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "php": "^7.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
+        "garygreen/pretty-routes": "^1.0",
+        "genl/matice": "^1.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.2.4",
         "laravel/framework": "^8.0",
@@ -21,6 +23,7 @@
         "tightenco/ziggy": "^0.9.4"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
