--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
         "nwidart/laravel-modules": "^8.0",
+        "spatie/laravel-sluggable": "^2.6",
         "tightenco/ziggy": "^0.9.4"
     },
     "require-dev": {
